Fixed event cards overflows

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,12 +43,26 @@ header img.notifications-icon:hover {
 }
 
 @keyframes tilt-shaking {
-    0% { transform: rotate(0deg); }
-    25% { transform: rotate(5deg); }
-    50% { transform: rotate(0deg); }
-    75% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(5deg);
+    }
+
+    50% {
+        transform: rotate(0deg);
+    }
+
+    75% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
 
 .user-notifications-container {
     background-color: #00172b;
@@ -249,7 +263,9 @@ main>header span {
     font-weight: normal;
 }
 
-#content .home-page,#content .about-page, #content .mainFeatures-page {
+#content .home-page,
+#content .about-page,
+#content .mainFeatures-page {
     text-align: center;
     margin: 0 auto 0em auto;
     display: flex;
@@ -460,9 +476,40 @@ div.form {
     display: block;
 }
 
+.event-image {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    border-radius: 5% 5% 0 0;
+}
 
+.event-card .event-info {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    top: 50%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 1em auto;
+    padding: 0 1em;
+    text-align: center;
+}
 
+.event-card .event-info h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 1.6em;
+    font-weight: 600;
+    white-space: pre-line;    
+}
 
+.event-card .event-info p:nth-child(2) {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
 .event-pin {
     margin: 0.1em;
@@ -472,9 +519,7 @@ div.form {
     width: 50px;
     height: 50px;
     z-index: 3;
-
 }
-
 
 .event-hidden {
     background-color: rgb(43, 63, 124);
@@ -497,36 +542,6 @@ div.form {
     position: absolute;
     bottom: 0;
 }
-
-
-.event-image {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-    border-radius: 5% 5% 0 0;
-}
-
-.event-card .event-info {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    top: 47%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: 1em auto;
-    padding: 0 1em;
-    text-align: center;
-}
-
-.event-card .event-info h3 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.6em;
-    font-weight: 600;
-}
-
 
 input.search-event {
     margin: 1em 0;
@@ -616,13 +631,14 @@ input.search-event {
     padding: 0;
 }
 
-div.event-owner-message h3{
+div.event-owner-message h3 {
     margin-bottom: 0;
 }
-div.event-owner-message p{
+
+div.event-owner-message p {
     margin-bottom: 2rem;
     font-weight: 600;
-    
+
 }
 
 .profile-events-title-div {
@@ -990,7 +1006,7 @@ textarea {
 .profile-header img {
     height: 200px;
     width: 200px;
-    object-fit: cover;  
+    object-fit: cover;
     border-radius: 3%;
 }
 
@@ -1024,34 +1040,36 @@ form#searchForm div.input_field select {
     padding-left: 10px;
 }
 
-li.poll-option label{
+li.poll-option label {
     display: flex;
     flex-direction: row;
 }
 
-.poll-header{
+.poll-header {
     display: flex;
     flex-direction: row;
 }
 
-.poll-header button.fake-poll-delete-button{
+.poll-header button.fake-poll-delete-button {
     margin-left: 10px;
 }
 
 
-.poll-header h3{
+.poll-header h3 {
     margin-bottom: 0px;
     align-self: center;
 }
 
-ul.names{
+ul.names {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.about-card:hover, .name-card:hover, .mainFeatures-page .main .feature:hover {
+.about-card:hover,
+.name-card:hover,
+.mainFeatures-page .main .feature:hover {
     scale: 1.05;
 }
 
@@ -1066,27 +1084,28 @@ ul.names{
     transition: scale 0.9s;
 }
 
-.name-card p, .name-card a{
+.name-card p,
+.name-card a {
     color: white;
 }
 
-.name-card strong{
+.name-card strong {
     font-weight: 600;
 }
 
-.about-card p{
+.about-card p {
     height: 100%;
-    font-size: 1.2em;   
+    font-size: 1.2em;
 }
 
 
 
 
 @media (max-width: 1050px) {
-    #content .home-page{
+    #content .home-page {
         padding-top: 152px;
     }
-    
+
     .search-container {
         flex-direction: column;
     }
@@ -1117,10 +1136,21 @@ ul.names{
         scale: 0.8;
     }
 
-
     .event-card {
         width: 17em;
-        min-height: 23em;
+        min-height: 30em;
+    }
+
+    .event-card .event-info {
+        top: 50%;
+    }
+
+    .event-card .event-info h3{
+        white-space: pre-line;
+    }
+
+    .event-card .event-info p:nth-child(2) {
+        overflow: hidden;
     }
 
     .event-pin {
@@ -1131,9 +1161,7 @@ ul.names{
         width: 50px;
         height: 50px;
         z-index: 3;
-
     }
-
 
     .event-hidden {
         background-color: rgb(43, 63, 124);
@@ -1271,7 +1299,7 @@ footer a:hover {
     flex-direction: column;
 }
 
-.call-to-action{
+.call-to-action {
     margin: auto;
     max-width: 75%;
     text-align: center;
